--- a/mobile-demo-n-lyaerd-mvvm-app/app/presentation/src/main/res/values/strings.xml
+++ b/mobile-demo-n-lyaerd-mvvm-app/app/presentation/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">mobile-demo-mvvm</string>
     <string name="title_activity_main">MainActivity</string>
+    <string name="content_description_media">Image</string>
 
     <!-- Primary screens titles -->
     <string name="title_auctions">auctions</string>
