-Created my profile for mobile -Create reactive search for web via websocket

--- a/mobile-demo-n-lyaerd-mvvm-app/app/presentation/src/main/res/values/strings.xml
+++ b/mobile-demo-n-lyaerd-mvvm-app/app/presentation/src/main/res/values/strings.xml
@@ -6,5 +6,5 @@
     <!-- Primary screens titles -->
     <string name="title_auctions">auctions</string>
     <string name="title_albums">Albums</string>
-    <string name="title_todos">TODO</string>
+    <string name="my_profile">My profile</string>
 </resources>
